[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Enemies/Bosses/CrystalGolemHead.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Enemies/Bosses/CrystalGolemFist.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Enemies/Bosses/CrystalGolem.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.5, 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.25, 9.25 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 3 )

[node name="CrystalGolem" type="Node2D"]

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
script = ExtResource( 3 )

[node name="Head" type="Sprite" parent="KinematicBody2D"]
texture = ExtResource( 1 )

[node name="FistLeft" type="Sprite" parent="KinematicBody2D"]
position = Vector2( -35, 29 )
texture = ExtResource( 2 )
flip_h = true

[node name="StaticBody2D" type="StaticBody2D" parent="KinematicBody2D/FistLeft"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/FistLeft/StaticBody2D"]
position = Vector2( 3, -5 )
shape = SubResource( 1 )

[node name="FistRight" type="Sprite" parent="KinematicBody2D"]
position = Vector2( 42, 30 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="KinematicBody2D/FistRight"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/FistRight/StaticBody2D"]
position = Vector2( -1, -5 )
shape = SubResource( 1 )

[node name="HeadCollision" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 1.5, -1.5 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="KinematicBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Area2D"]
position = Vector2( 1, -12 )
shape = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="KinematicBody2D"]

[node name="Health" type="Label" parent="KinematicBody2D/CanvasLayer"]
margin_left = 916.0
margin_top = 14.0
margin_right = 962.0
margin_bottom = 28.0
text = "Health:"

[connection signal="body_entered" from="KinematicBody2D/Area2D" to="KinematicBody2D" method="_on_Area2D_body_entered"]
